--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        buildFeatures {
+            dataBinding = true
+            viewBinding = true
+        }
+    }
 }
 
 dependencies {
