--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.shawn.mvvm_cathybk'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.shawn.mvvm_cathybk"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -39,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    apply plugin: 'kotlin-kapt'
     implementation project(path: ':network')
     implementation project(path: ':common')
 
@@ -56,6 +58,11 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+
+    implementation "androidx.paging:paging-runtime-ktx:3.2.0-alpha03"
+    
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
