--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_travel_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_travel_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mvvm_cathybk.Material3.Light">
         <activity
@@ -28,7 +28,6 @@
         <activity
             android:name=".entry.EntryActivity"
             android:exported="true"
-            android:label="@string/title_activity_entry"
             android:theme="@style/Theme.Mvvm_cathybk.Material3.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
