--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
+    implementation 'app.rive:rive-android:4.0.0'
+    // During initialization, you may need to add a dependency
+    // for Jetpack Startup
+    implementation "androidx.startup:startup-runtime:1.1.0"
+
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit-adapters:2.6.2'
