--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_travel_logo"
@@ -11,6 +12,15 @@
         android:roundIcon="@mipmap/ic_travel_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mvvm_cathybk.Material3.Light">
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data android:name="app.rive.runtime.kotlin.RiveInitializer"
+                android:value="androidx.startup" />
+        </provider>
+
         <activity
             android:name=".main.web.WebViewActivity"
             android:exported="false">
