--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     implementation "androidx.paging:paging-runtime-ktx:3.2.0-alpha03"
-    
+
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
@@ -71,4 +71,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
+
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation 'io.mockk:mockk:1.12.0'
+    androidTestImplementation "io.mockk:mockk-android:1.12.0"
+    testImplementation "io.mockk:mockk-android:1.12.0"
 }
